Update contact link in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <section class="card view" id="contactView">
                 <div class="lang-zh">
                     <h2 lang="zh">联系</h2>
-                    <p class="muted" lang="zh">访问： <a href="https://chaow.github.io" target="_blank">chaow.github.io</a></p>
+                    <p class="muted" lang="zh">访问： <a href="https://chaow.github.io" target="_blank">chaowww.github.io</a></p>
                     <p class="muted" lang="zh">邮箱： <a href="mailto:chaow@bupt.edu.cn">chaow@bupt.edu.cn</a></p>
                 </div>
                 <div class="lang-en">
