--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="lang-zh">
           <h2 id="homeTitle" lang="zh">个人与实验室简介</h2>
           <p lang="zh" class="muted">
-            我是北京邮电大学电子工程学院副教授，研究员，博士生导师，长期从事光电子集成电路、智能计算、光传感、光互连及片上系统集成方向研究等。
+            我是北京邮电大学副教授，研究员，硕士生和博士生导师，长期从事光电子集成电路、智能计算、光传感、光互连及片上系统集成方向研究，以第一及共同作者在Nature Photonics等发表高水平学术论文30余篇，研制世界首台百纳米生物粒子光电智能传感平台，原创性提出百万TOPS通用光学计算芯片、架构及系统，申请国家发明专利10余项，主持/参与国家自然科学基金重大/重点项目、科技部重点研发青年科学家项目、科技部科技创新2030重大项目及国家重点研发计划项目等多项。
           </p>
         </div>
         <div class="lang-en">
