--- a/index.html
+++ b/index.html
@@ -911,27 +911,27 @@
             research: ["Optoelectronic Intelligent Computing, On-Chip System Integration", "光电智能计算、片上系统集成"]
           },
           {
-            name: ["Ming Zhang", "张明"],
+            name: ["San Zhang", "张三"],
             position: ["Ph.D. Candidate", "博士研究生"],
-            role: ["Class of 2021", "2021级"],
-            research: ["Photonic Neural Network Chip Design", "光子神经网络芯片设计"]
+            role: ["Class of 2025", "2025级"],
+            research: ["Photonic Sensor Chip Design", "光子传感芯片设计"]
           }
         ]
       },
       positions: {
         title: ["Open Positions", "招聘信息"],
-        subtitle: ["We are recruiting postdocs, Ph.D./Master students, and research assistants", "长期招收博士后、博士/硕士研究生、科研助理"],
+        subtitle: ["We are recruiting postdocs, Ph.D./Master students, and research assistants", "长期招收博士后、博士/硕士研究生、本硕博实习生及科研助理"],
         introTitle: ["Recruitment Information", "招聘说明"],
         introContent: [
           "Our lab is continuously recruiting postdoctoral researchers, Ph.D. students, Master's students, and research assistants. We offer competitive salaries, excellent research environments, and broad development opportunities.",
-          "实验室长期招收博士后、博士研究生、硕士研究生及科研助理。我们提供具有竞争力的薪酬待遇、优良的科研环境和广阔的发展空间。"
+          "实验室长期招收博士后、博士研究生、硕士研究生、本硕博实习生、光电&生医领域工程师及科研助理。我们提供具有竞争力的薪酬待遇、优良的科研环境和广阔的发展空间。"
         ],
         detailsTitle: ["Requirements", "具体要求"],
         detailsItems: [
           [
             ["Postdoctoral Researchers: Ph.D. graduates in Optical Engineering, Electronic Engineering, Computer Science or related fields", "博士后：光学工程、电子工程、计算机科学等相关专业博士毕业生"],
-            ["Ph.D. Students: Master's degree with experience in optoelectronic integration or AI algorithms preferred", "博士研究生：硕士学历，有光电集成或AI算法研究经验者优先"],
-            ["Master's Students: Bachelor's degree with strong interest in optoelectronic intelligent computing", "硕士研究生：本科学历，对光电智能计算有浓厚兴趣"],
+            ["Ph.D. Students: Bachelor/Master's degree with experience in optoelectronic integration or AI algorithms preferred", "博士研究生：本科/硕士学历，有光电集成或AI算法研究经验者优先"],
+            ["Master's Students: Bachelor's degree with strong interest in optoelectronic intelligent computing", "硕士研究生：本科学历，对光电智能感知有浓厚兴趣"],
             ["Research Assistants: Bachelor's degree or above to assist with lab management and project execution", "科研助理：本科及以上学历，协助实验室日常管理与项目执行"]
           ]
         ],
@@ -956,11 +956,6 @@
             title: ["100nm Bio-Particle Sensing", "100纳米生物粒子传感"],
             desc: ["Created the first optoelectronic intelligent sensing platform capable of detecting 100nm biological particles.", "创建了第一个能够检测100纳米生物粒子的光电智能传感平台"],
             journal: ["Science Advances 2022", "科学进展 2022"]
-          },
-          {
-            title: ["Optical Neural Networks", "光学神经网络"],
-            desc: ["Designed and implemented optical neural network architecture for edge computing applications.", "为边缘计算应用设计和实现了光学神经网络架构"],
-            journal: ["Nature Communications 2021", "自然通讯 2021"]
           }
         ]
       },
