--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
               <div class="item-content">
                 <div class="item-text">
                   <h4>High-performance photonic computing chip</h4>
-                  <p><strong>Nature Photonics</strong> • 2023 • DOI: 10.1038/s41566-023-01234-5</p>
+                  <p><strong>Nature Photonics</strong> • 2025 • DOI: 10.1038/s41566-023-01234-5</p>
                   <p class="muted">Proposed a million-TOPS computing chip architecture based on silicon photonic integration technology</p>
                 </div>
                 <div class="item-actions" style="display: none;">
@@ -634,9 +634,9 @@
             <div class="list-item" data-id="2">
               <div class="item-content">
                 <div class="item-text">
-                  <h4>Optical neural networks for edge computing</h4>
+                  <h4>Optical sensor system for biosening</h4>
                   <p><strong>Science Advances</strong> • 2022 • DOI: 10.1126/sciadv.abn7890</p>
-                  <p class="muted">Design and implementation of optical neural network architecture for edge computing</p>
+                  <p class="muted">Design and implementation of silicon on-chip system for biosensing</p>
                 </div>
                 <div class="item-actions" style="display: none;">
                   <button class="control-btn edit" onclick="editPublication(2)">Edit</button>
@@ -893,9 +893,9 @@
             desc: ["Proposed a million-TOPS computing chip architecture based on silicon photonic integration technology", "提出了一种基于硅基光子集成技术的百万TOPS计算芯片架构"]
           },
           {
-            title: ["Optical neural networks for edge computing", "面向边缘计算的光神经网络"],
+            title: ["Optical chip for biosensing", "面向智能感知的光学生物芯片与系统"],
             journal: ["Science Advances", "科学进展"],
-            desc: ["Design and implementation of optical neural network architecture for edge computing", "面向边缘计算的光神经网络架构设计与实现"]
+            desc: ["Design and implementation of optical neural network architecture for edge computing", "面向智能感知的硅光生医芯片与系统"]
           }
         ]
       },
