--- a/index.html
+++ b/index.html
@@ -756,8 +756,8 @@
             <div class="achievement-title">Million-TOPS Optical Computing Chip</div>
             <div class="achievement-desc">Developed the world's first general-purpose optical computing chip architecture with million-TOPS performance.</div>
             <div class="achievement-meta">
-              <span>Nature Photonics 2023</span>
-              <span>DOI: 10.1038/s41566-023-01234-5</span>
+              <span>Nature Photonics 2025</span>
+              <span>DOI: 10.1038/s41566-023-012xx-5</span>
             </div>
           </div>
           
@@ -765,8 +765,8 @@
             <div class="achievement-title">100nm Bio-Particle Sensing</div>
             <div class="achievement-desc">Created the first optoelectronic intelligent sensing platform capable of detecting 100nm biological particles.</div>
             <div class="achievement-meta">
-              <span>Science Advances 2022</span>
-              <span>DOI: 10.1126/sciadv.abn7890</span>
+              <span>Applied Physics Reviews 2022</span>
+              <span>DOI: 10.1126/apr.xxn7890</span>
             </div>
           </div>
 
