--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
               <div class="item-content">
                 <div class="item-text">
                   <h4>Optical sensor system for biosening</h4>
-                  <p><strong>Science Advances</strong> • 2022 • DOI: 10.1126/sciadv.abn7890</p>
+                  <p><strong>Applied Physics Reviews</strong> • 2022 • DOI: 10.1126/apr.xxn7890</p>
                   <p class="muted">Design and implementation of silicon on-chip system for biosensing</p>
                 </div>
                 <div class="item-actions" style="display: none;">
@@ -1031,7 +1031,7 @@
         translations.publications.items.forEach((item, index) => {
           if (pubItems[index]) {
             pubItems[index].querySelector('h4').textContent = item.title[langIndex];
-            pubItems[index].querySelector('p').innerHTML = `<strong>${item.journal[langIndex]}</strong> • 2022 • DOI: 10.1038/s41566-023-xx234-5`;
+            pubItems[index].querySelector('p').innerHTML = `<strong>${item.journal[langIndex]}</strong> • 2025 • DOI: 10.1038/s41566-023-xx234-5`;
             pubItems[index].querySelector('.muted').textContent = item.desc[langIndex];
           }
         });
