--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
         <div class="content-card" id="people-content" style="display: none;">
           <div class="content-header">
             <div>
-              <h2>Team Members</h2>
+              <h2>People</h2>
               <p>Lab members and their research directions</p>
             </div>
             <div class="editor-actions" style="display: none;">
@@ -693,7 +693,7 @@
         <div class="content-card" id="positions-content" style="display: none;">
           <div class="content-header">
             <div>
-              <h2>Open Positions</h2>
+              <h2>Positions</h2>
               <p>We are recruiting postdocs, Ph.D./Master students, and research assistants</p>
             </div>
           </div>
@@ -900,7 +900,7 @@
         ]
       },
       people: {
-        title: ["Team Members", "团队成员"],
+        title: ["People", "团队"],
         subtitle: ["Lab members and their research directions", "实验室成员介绍与研究方向"],
         addBtn: ["Add Member", "添加成员"],
         items: [
@@ -919,7 +919,7 @@
         ]
       },
       positions: {
-        title: ["Open Positions", "招聘信息"],
+        title: ["Positions", "招聘信息"],
         subtitle: ["We are recruiting postdocs, Ph.D./Master students, and research assistants", "长期招收博士后、博士/硕士研究生、本硕博实习生及科研助理"],
         introTitle: ["Recruitment Information", "招聘说明"],
         introContent: [
@@ -960,7 +960,7 @@
         ]
       },
       ui: {
-        editModeBtn: ["Edit Mode", "编辑模式"],
+        editModeBtn: ["Edit", "编辑模式"],
         langBtn: ["中文", "English"],
         edit: ["Edit", "编辑"],
         delete: ["Delete", "删除"],
