--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
           },
           {
             title: ["Optical chip for biosensing", "面向智能感知的光学生物芯片与系统"],
-            journal: ["Science Advances", "科学进展"],
+            journal: ["Appled Physics Reviews", "应用物理评论"],
             desc: ["Design and implementation of optical neural network architecture for edge computing", "面向智能感知的硅光生医芯片与系统"]
           }
         ]
