--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
           <div class="content-header">
             <div>
               <h2>Personal & Lab Introduction</h2>
-              <p>About our research directions and team information</p>
+              <p>About our research scopes and team information</p>
             </div>
           </div>
           <div class="editable-content">
