--- a/index.html
+++ b/index.html
@@ -2010,7 +2010,7 @@ xm-select[size='mini'] .item--divided {
           <div class="content-header" style="box-shadow: none;">
             <div style="box-shadow: none;">
               <h2>Home</h2>
-              <p style="box-shadow: none;">About our research directions and team information</p>
+              <p style="box-shadow: none;">About our research scopes and team information</p>
             </div>
           </div>
           <div class="editable-content" style="box-shadow: none;">
