--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@ xm-select[size='mini'] .item--divided {
 
     <!-- 页脚 -->
     <footer class="footer">
-      <p>© 2025 Optoelectronic Intelligent Computing Lab, BUPT · All Rights Reserved</p>
+      <p>© 2026 Optoelectronic Intelligent Computing Lab, BUPT · All Rights Reserved</p>
     </footer>
   </div>
 
@@ -2295,7 +2295,7 @@ xm-select[size='mini'] .item--divided {
           {
             title: ["Optical chip for biosensing", "面向智能感知的光学生物芯片与系统"],
             journal: ["Appled Physics Reviews", "应用物理评论"],
-            desc: ["Design and implementation of optical neural network architecture for edge computing", "面向智能感知的硅光生医芯片与系统"]
+            desc: ["Design and implementation of optical chip and system for biosensing", "面向智能感知的硅光生医芯片与系统"]
           }
         ]
       },
@@ -2314,7 +2314,7 @@ xm-select[size='mini'] .item--divided {
             name: ["San Zhang", "张三"],
             position: ["Ph.D. Candidate", "博士研究生"],
             role: ["2025", "2025级"],
-            research: ["Photonic Sensor Chip Design", "光子传感芯片设计"]
+            research: ["Photonic Sensing Chip Design", "光子传感芯片设计"]
           }
         ]
       },
