--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@ xm-select[size='mini'] .item--divided {
                 <div class="item-text" style="box-shadow: none;">
                   <h4>Chao Wang</h4>
                   <p style="box-shadow: none;"><strong>Lab Director</strong> • Associate Professor/Researcher/Ph.D. Supervisor</p>
-                  <p class="muted" style="box-shadow: none;">研究方向：Optoelectronic Intelligent Computing, On-Chip System Integration</p>
+                  <p class="muted" style="box-shadow: none;">Research: Optoelectronic Intelligent Computing, On-Chip System Integration</p>
                 </div>
                 <div class="item-actions" style="display: flex; box-shadow: none;">
                   <button class="control-btn edit" onclick="editPerson(1)" style="box-shadow: none;">Edit</button>
@@ -1399,7 +1399,7 @@ xm-select[size='mini'] .item--divided {
                 <div class="item-text">
                   <h4>San Zhang</h4>
                   <p><strong>Ph.D. Candidate</strong> • 2025</p>
-                  <p class="muted">研究方向：Photonic Sensing chip design</p>
+                  <p class="muted">Research: Photonic Sensing Chip Design</p>
                 </div>
                 <div class="item-actions" style="display: flex; box-shadow: none;">
                   <button class="control-btn edit" onclick="editPerson(2)" style="box-shadow: none;">Edit</button>
@@ -1412,7 +1412,7 @@ xm-select[size='mini'] .item--divided {
               <div class="item-text">
                 <h4>So Li</h4>
                 <p><strong>Phd Candidate</strong> • 2025</p>
-                <p class="muted">Research: Optical computing system design</p>
+                <p class="muted">Research: Optical Computing System Design</p>
               </div>
               <div class="item-actions" style="display: flex; box-shadow: none;">
                 <button class="control-btn edit" onclick="editPerson(1769851397196)" style="box-shadow: none;">Edit</button>
@@ -1439,7 +1439,7 @@ xm-select[size='mini'] .item--divided {
                 </div>
               </div>
               <div class="content-display" style="box-shadow: none;">
-                <p style="box-shadow: none;">实验室长期招收博士后、博士研究生、硕士研究生、本硕博实习生、光电&amp;生医领域工程师及科研助理。我们提供具有竞争力的薪酬待遇、优良的科研环境和广阔的发展空间。</p>
+                <p style="box-shadow: none;">实验室长期招收博士后、博士研究生、硕士研究生、本硕博实习生、光电&生医领域工程师及科研助理。我们提供具有竞争力的薪酬待遇、优良的科研环境和广阔的发展空间。</p>
               </div>
             </div>
             
@@ -1450,10 +1450,10 @@ xm-select[size='mini'] .item--divided {
               </div>
               <div class="content-display" style="box-shadow: none; display: block;">
                 <ul style="box-shadow: none;">
-                  <li style="box-shadow: none;"><strong>Postdoctoral Researchers</strong>: undefined</li>
-                  <li style="box-shadow: none;"><strong>Ph.D. Students</strong>: undefined</li>
-                  <li style="box-shadow: none;"><strong>Master's Students</strong>: undefined</li>
-                  <li style="box-shadow: none;"><strong>Research Assistants</strong>: undefined</li>
+                  <li style="box-shadow: none;"><strong>Postdoctoral Researchers</strong>: 光学工程、电子工程、计算机科学或相关领域博士毕业生</li>
+                  <li style="box-shadow: none;"><strong>Ph.D. Students</strong>: 优先考虑拥有光电集成或人工智能算法经验的本科直博/硕士毕业生</li>
+                  <li style="box-shadow: none;"><strong>Master's Students</strong>: 本科毕业且对光电智能计算有浓厚兴趣</li>
+                  <li style="box-shadow: none;"><strong>Research Assistants</strong>: 本科及以上学历，协助实验室管理与项目执行</li>
                 </ul>
               </div>
             </div>
